syntax="proto3";
option java_outer_classname="Messages";
option java_package="com.feiyu.base.proto";
option optimize_for=SPEED;

message Msg {
  /** 消息类型 */
  MsgType type=1;
  oneof info {
    /** 普通消息 */
    GenericMsg genericMsg=2;
    /** 通知 */
    NoticeMsg noticeMsg=3;
    /** 查询 */
    QueryMsg queryMsg=4;
    /** 控制 */
    ControlMsg controlMsg=5;
    /** 占位 */
    bytes empty=7;
  }
}
/**
  消息类型，共五种：通知、通用消息、控制消息、查询消息、心跳
 */
enum MsgType {
  NOTICE=0;
  GENERIC=1;
  CONTROL=2;
  QUERY=3;
  HEARTBEAT=4;
}

/**
  通用消息体
 */
message GenericMsg {
  Peers peers=1;          // 通信双方
  int32 type=2;           // 消息的具体类型
  bytes data=3;           // 数据
  optional MsgExtraInfo extraInfo=4;  // 消息的额外信息，接收方用
}

message Peers {
  int64 from=1;
  int64 to=2;
}

/**
  消息的额外信息
 */
message MsgExtraInfo {
  int64 msgId=4;            // 消息ID，接收方用
  int64 seqId=5;            // 消息序列号，接收方用
  int64 timestamp=6;        // 消息时间戳，接收方用
  optional int64 digest=8;  // 消息的签名 = crc16(data) & to
}

/**
  通知
 */
message NoticeMsg {
  NoticeType type=1;
  oneof info {
    int64 msgId=2;                  // 其他
    MsgExtraInfo extraInfo=3;       // 用于 ConnectRsv服务端 -> 发送方：消息已接收通知
    MsgDelivery ackMsgDelivery=4;   // 接收方 -> ConnectRsv服务端：消息已送达ack
    bool hasUnread=5;               // 用于登录ack
  }
}

message MsgDelivery {
  repeated int64 seqId=1;  // 与from一一对应
  repeated int64 from=2;
}

enum NoticeType {
  RECEIVED=0;             // 已接收
  DELIVERED=1;            // 已投递
  READ=2;                 // 已读
  DELIVERED_ACK=3;        // 已送达ACK
  READ_ACK=4;             // 已读ACK
  LOGIN_ACK=5;            // 登录ACK
}
/**
  查询报文
 */
message QueryMsg {
  QueryType type=1;
  optional int64 to=2;
  optional MsgDelivery msgDelivery=3;
}

enum QueryType {
  MSG_STATE_QUERY=0;       // 查询消息状态
  MSG_PULL=1;              // 拉取消息
}

/**
  控制报文
 */
message ControlMsg {
  ControlType type=1;
  oneof info {
    ClientInfo clientInfo=2;
    int64 msgId=3;
  }
}

enum ControlType {
  MSG_DELIVERED_FAIL=0;
  CLIENT_LOGIN=1;
}

message ClientInfo {
  int64 uid=1;              // 用户ID
  string dvcName=2;         // 设备名称
  string dvcSerialNumber=3; // 设备序列号
}